--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "udemy",
+    "name": "Todo-React",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -8,8 +8,10 @@
         "@testing-library/user-event": "^13.2.1",
         "babel-eslint": "^10.1.0",
         "eslint": "^8.25.0",
+        "json-server": "^0.17.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.6.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.0"
     },
